--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,9 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   mqtt_client: ^9.4.0
+  hive: ^2.0.4
+  hive_flutter: ^1.1.0
+  provider: ^6.0.1
 
 dev_dependencies:
   flutter_test:
@@ -37,6 +40,9 @@ dev_dependencies:
   flutter_svg: ^0.22.0
   flutter_colorpicker: ^0.4.0
   percent_indicator: ^3.0.1
+  flutter_lints: ^1.0.0
+  build_runner: ^2.0.4
+  hive_generator: ^1.1.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
